--- a/templates/search.html
+++ b/templates/search.html
@@ -17,22 +17,66 @@
         </style>
     </head>
     <body>
-        <h1>Agenda</h1>
+        <h1>Buscar Contactos</h1>
+        <form action="/search" method="post">
+            <table>
+                <td>
+                    <label for="firstName">Nombre:</label><br />
+                    <input type="text" name="firstName" />
+                </td>
+                <td>
+                    <label for="lastName">Apellido:</label><br />
+                    <input type="text" name="lastName" />
+                </td>
+                <td>
+                    <label for="cellphone">Télefono:</label><br />
+                    <input type="text" name="cellphone" />
+                </td>
+                <td>
+                    <label for="email">Correo:</label><br />
+                    <input type="text" name="email" />
+                </td>
+                <td><br /><input type="submit" value="Buscar" /></td>
+            </table>
+        </form>
+        <br />
+        {% if searchs %}
+        <h3>Busqueda</h3>
         <table>
-            <tr>
-                <td style="padding: 1 15 1 15"></td>
-                <td>
-                    <form action="/submitPage" method="get">
-                        <input type="submit" value="Agregar" />
-                    </form>
-                </td>
-                <td>
-                    <form action="/searchPage" method="get">
-                        <input type="submit" value="Buscar" />
-                    </form>
-                </td>
+            {% for search in searchs %}
+            <tr style="text-align: left">
+                <th style="padding: 1 15 1 15"></th>
+                {% if search[0] %}
+                <th style="padding: 1 10 1 1">Nombre</th>
+                {% endif %}
+                {% if search[1] %}
+                <th style="padding: 1 30 1 1">Apellido</th>
+                {% endif %}
+                {% if search[2] %}
+                <th style="padding: 1 50 1 1">Celular</th>
+                {% endif %}
+                {% if search[3] %}
+                <th style="padding: 1 40 1 1">Correo</th>
+                {% endif %}
             </tr>
+            <tr>
+                <td></td>
+                {% if search[0] %}
+                <td>{{ search[0] }}</td>
+                {% endif %}
+                {% if search[1] %}
+                <td>{{ search[1] }}</td>
+                {% endif %}
+                {% if search[2] %}
+                <td>{{ search[2] }}</td>
+                {% endif %}
+                {% if search[3] %}
+                <td>{{ search[3] }}</td>
+                {% endif %}
+            </tr>
+            {% endfor %}
         </table>
+        <h3>Resultados</h3>
         <table>
             <thead>
                 <tr style="text-align: left">
@@ -75,5 +119,6 @@
                 {% endfor %}
             </tbody>
         </table>
+        {% endif %}
     </body>
 </html>
